--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-398.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 167.88.61.175, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-329.2KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-611.2KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-13.77MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-925.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-343.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇩🇪 德国-1.32MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林), server: kkytr01.kekeyun.xyz, port: 12813, type: trojan, password: befba3a2-2379-3e99-8063-46707c3e6e7a, sni: kkytr01.kekeyun.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-1.02MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇩🇪 德国-2.05MB/s(Youtube:不良林), server: 193.108.117.75, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-1.53MB/s(Youtube:不良林), server: 193.108.117.75, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
