--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-925.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-343.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 167.88.61.175, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-596.4KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇩🇪 德国-1.32MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林), server: kkytr01.kekeyun.xyz, port: 12813, type: trojan, password: befba3a2-2379-3e99-8063-46707c3e6e7a, sni: kkytr01.kekeyun.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.02MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇩🇪 德国-2.05MB/s(Youtube:不良林), server: 193.108.117.75, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.53MB/s(Youtube:不良林), server: 193.108.117.75, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-747.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇬🇧 英国-304.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 167.88.61.175, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-745.4KB/s(Youtube:不良林), server: 167.88.61.213, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-925.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
