--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 167.88.61.175, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-596.4KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇩🇪 德国-1.32MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-747.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇬🇧 英国-304.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 167.88.61.175, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-745.4KB/s(Youtube:不良林), server: 167.88.61.213, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-162.0KB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-701.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-613.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 167.88.61.213, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 167.88.61.175, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.59, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-747.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
