--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-162.0KB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-701.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-613.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-176.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-264.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-596.4KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 167.88.61.213, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 167.88.61.175, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活10天)香港-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-613.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
